# autoloom

./: .gitignore  README.md
autoloom/: pyproject.toml
autoloom/lui/: main.py
autoloom/lui/models/: classifier.py  generator.py
autoloom/lui/ui/: app.py  generation_manager.py  styles.css
autoloom/lui/ui/components/: completion_overlay.py  generation_box.py  quit_overlay.py
autoloom/tunes/: generated_examples.jsonl  vie.jsonl
autoloom/tuni/: client_types.py  config.py  hyper_api.py  main.py  tuner.py
